feat: 使用Nuitka打包启动器

--- a/.github/开发文档/开发指南.md
+++ b/.github/开发文档/开发指南.md
@@ -48,3 +48,8 @@ uv run pyinstaller --onefile --uac-admin --icon="../assets/ui/zzz_logo.ico" ../s
 ```shell
 uv run pyinstaller "OneDragon Launcher.spec"
 ```
+
+使用nuitka打包
+```shell
+nuitka --onefile --windows-icon-from-ico=..\assets\ui\logo.ico --output-filename=OneDragon-Launcher.exe ..\src\zzz_od\win_exe\launcher.py
+```
