--- a/.github/开发文档/开发指南.md
+++ b/.github/开发文档/开发指南.md
@@ -27,24 +27,18 @@ uv sync --group dev
 生成spec文件并打包
 
 ```shell
-uv run pyinstaller --onefile --windowed --uac-admin --icon="../assets/ui/installer_logo.ico" --add-data "../config/project.yml;config" ../src/zzz_od/gui/zzz_installer.py -n "OneDragon Installer"
+uv run pyinstaller --onefile --windowed --uac-admin --icon="../assets/ui/installer_logo.ico" --add-data "../config/project.yml;config" ../src/zzz_od/gui/zzz_installer.py -n "OneDragon-Installer"
 ```
 
 使用spec打包
 
 ```shell
-uv run pyinstaller "OneDragon Installer.spec"
+uv run pyinstaller --noconfirm --clean "OneDragon-Installer.spec"
 ```
 
 ## 2.2.启动器
 
-生成spec文件并打包
-
+使用spec打包，会自动生成种子文件
 ```shell
-uv run pyinstaller --onefile --uac-admin --icon="../assets/ui/zzz_logo.ico" ../src/zzz_od/win_exe/launcher.py -n "OneDragon Launcher"
-```
-
-使用spec打包
-```shell
-uv run pyinstaller "OneDragon Launcher.spec"
+uv run pyinstaller --noconfirm --clean "OneDragon-Launcher.spec"
 ```
